--- a/django_slick_admin/sass/components/_modules.sass
+++ b/django_slick_admin/sass/components/_modules.sass
@@ -20,9 +20,21 @@
 
   >h2
     margin-top: 20px
-    padding: 20px 30px
+    padding: 20px 30px 0
     color: $form-input-color
     font-weight: bold
+    background-color: transparent
+    color: $form-fieldset-title-color
+    text-transform: uppercase
+
+    &::before
+      @extend .material-icons
+      content: 'menu'
+      vertical-align: middle
+      transition: transform .3s ease-in-out
+      margin-top: -3px
+      margin-right: 5px
+      color: $form-fieldset-title-color
 
   .inline-related
     margin: 30px
