--- a/django_slick_admin/sass/settings/_defaults.sass
+++ b/django_slick_admin/sass/settings/_defaults.sass
@@ -187,8 +187,11 @@ $collapse-border-color: lighten($gray-lighter, 4)
 $collapse-border-left-size: 3px
 $collapse-background-color: darken($white, 2)
 $expanded-border-color: $collapse-hilight-color
-
 $collapse-header-bg: transparent
+
+$collapse-toggle-color: lighten($gray-light,10)
+$collapse-toggle-hover-color: $white
+$collapse-toggle-bg: $form-bg
 
 
 //SELECTOR WIDGET ////////////////////////////////
